# curv

./: Cargo.toml
src/arithmetic/big_native/: primes.rs
src/elliptic/curves/: secp256_k1.rs
src/elliptic/curves/bls12_381/: g1.rs  g2.rs  pairing.rs  scalar.rs
