[package]
name = "curv-kzen"
version = "0.10.0"
edition = "2018"
authors = [
    "Omer Shlomovits",
    "Denis Varlakov",
]
license = "MIT"
description = "Curv contains an extremely simple interface to onboard new elliptic curves. Use this library for general purpose elliptic curve cryptography"
repository = "https://github.com/ZenGo-X/curv"

[lib]
name = "curv"
crate-type = ["lib"]

[dependencies]
cryptoxide = "0.1.2"
curve25519-dalek = { git="https://github.com/fathens/curve25519-dalek", branch = "wasm"}
digest = "0.9"
generic-array = "0.14"
typenum = "1.13"
ff = { git = "https://github.com/fathens/ff-zeroize", branch = "wasm"}
hex = { version = "0.4", features = ["serde"] }
hmac = "0.11"
thiserror = "1"
lazy_static = "1.4"
num-traits = "0.2"
num-integer = "0.1"
pairing-plus = { git = "https://github.com/fathens/pairing-plus", branch = "wasm"}
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_derive = "1.0"
sha2 = "0.9"
sha3 = "0.9"
old_sha2 = { package = "sha2", version = "0.8" }
zeroize = "1"
merkle-cbt = "0.3"

rust-gmp-kzen = { version = "0.5", features = ["serde_support"], optional = true }
num-bigint = { version = "0.4", features = ["serde"], optional = true }

[dependencies.secp256k1]
version = "0.24"
default-features = false
features = ["serde", "rand-std", "global-context"]

[dependencies.p256]
version = "0.11.1"
features = ["ecdsa", "ecdsa-core"]

[dev-dependencies]
serde_test = "1.0"
serde_json = "1"
paste = "1.0.2"
proptest = "0.10"
proptest-derive = "0.2"
blake2 = "0.9"

[features]
default = ["num-bigint"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html", "--cfg", "docsrs" ]
